[styling] fix: 4px gap after post that doesn't have the reply slider due to block status

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -177,7 +177,7 @@ hr {
     display: flex;
     flex-direction: column;
     border: 1px solid var(--color-box-border);
-    margin: 0 8px 4px 8px;
+    margin: 0 8px 0 8px;
     padding: 12px;
     background-color: var(--color-box-bg);
 }
@@ -423,7 +423,7 @@ hr {
 }
 .prslide {
     height: 0;
-    margin-top: -5px;
+    margin-top: -1px;
     overflow: hidden;
     transition: height 100ms ease-out;
 }
@@ -671,7 +671,6 @@ hr {
     background-color: var(--color-box-bg);
     border: 1px solid var(--color-box-border);
     padding: 12px;
-    margin-bottom: 4px; /* hack to make it work with the slide-out reply thing */
     display: grid;
     grid-template-columns: 80px auto auto auto;
     grid-template-rows: auto auto auto auto auto auto;
